# gnome-abrt

./: configure.ac  gnome-abrt.spec  meson.build  meson_options.txt
src/: gnome-abrt  meson.build
src/gnome_abrt/: Makefile.am  oops.glade  views.py
